# Fraud-mule-account-detection-MVP-

./: .gitignore  README.md  RESULTS.md  pyproject.toml  requirements.txt
catboost_info/: catboost_training.json  time_left.tsv
files/: model_pipeline.py
files/catboost_info/: learn_error.tsv
files/catboost_info/learn/: events.out.tfevents
files/models/: predictions.csv
files/src/api/: main.py
files/src/dashboard/: __init__.py  app.py
files/src/pipeline/: __init__.py
models/: anomaly_scores.csv  anomaly_scores.parquet  baseline_model.pkl  baseline_oof.npy  ensemble_base_models.pkl  ensemble_oof.npy  explanations.json  feature_importance.csv  feature_names.json  feedback_log.csv  meta_model.pkl  metrics.json  predictions.parquet
src/: __init__.py  build_artifacts.py
src/api/: __init__.py
src/dashboard/: app.py
src/pipeline/: anomaly_engine.py  decision_engine.py  feature_engineering.py  leakage_firewall.py  train_ensemble.py
