[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-mule-detection"
version = "1.0.0"
description = "AI/ML Based Classification of Suspicious Mule Accounts"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[tool.vercel]
entrypoint = "src.api.main:app"
